tests/NormalTests/paczka1/small_fuzzy/89909209.err
Error in line 2: fNgUXHJRqYV S518 8,2
Error in line 8: vE1yBRu4NzT S780 16,3
Error in line 9: vE1yBRu4NzT S315 50,8
Error in line 1: mjy7bGJYv S315 27,9
Error in line 10: vE1yBRu4NzT S798 36,6
